@@ -527,7 +527,8 @@ ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 /**
  * @class ACE_recursive_thread_mutex_t
  *
- * @brief Implement a thin C++ wrapper that allows nested acquisition
+ * @brief
+ * Implement a thin C++ wrapper that allows nested acquisition
  * and release of a mutex that occurs in the same thread.
  *
  * This implementation is based on an algorithm sketched by Dave
@@ -551,8 +552,8 @@ public:
   ACE_thread_t owner_id_;
 };
 
-// Since recursive mutex is emulated, the state saving needs to be handled
-// in ACE as well. These members save those from ACE_recursive_thread_mutex_t.
+/// Since recursive mutex is emulated, the state saving needs to be handled
+/// in ACE as well. These members save those from ACE_recursive_thread_mutex_t.
 struct ACE_recursive_mutex_state
 {
   int nesting_level_;
@@ -679,9 +680,10 @@ ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 /**
  * @class ACE_Thread_ID
  *
- * @brief Defines a platform-independent thread ID class.  Note that
- *  this class should be defined within the scope of a thread, rather
- *  than at global scope!
+ * @brief
+ * Defines a platform-independent thread ID class.  Note that
+ * this class should be defined within the scope of a thread, rather
+ * than at global scope!
  */
 class ACE_Export ACE_Thread_ID
 {
@@ -1551,8 +1553,7 @@ namespace ACE_OS {
                   const char** thr_name = 0);
 
   ACE_NAMESPACE_INLINE_FUNCTION
-  int thr_equal (ACE_thread_t t1,
-                 ACE_thread_t t2);
+  int thr_equal (ACE_thread_t t1, ACE_thread_t t2);
 
   extern ACE_Export
   void thr_exit (ACE_THR_FUNC_RETURN status = 0);
@@ -1572,21 +1573,18 @@ namespace ACE_OS {
 # if defined (ACE_HAS_THREAD_SPECIFIC_STORAGE)
   ACE_NAMESPACE_INLINE_FUNCTION
   /// for internal use only.  Applications should call thr_getspecific
-  int thr_getspecific_native (ACE_OS_thread_key_t key,
-                              void **data);
+  int thr_getspecific_native (ACE_OS_thread_key_t key, void **data);
 # endif /* ACE_HAS_THREAD_SPECIFIC_STORAGE */
 
   ACE_NAMESPACE_INLINE_FUNCTION
-  int thr_getspecific (ACE_thread_key_t key,
-                       void **data);
+  int thr_getspecific (ACE_thread_key_t key, void **data);
 
 #if defined (ACE_HAS_VXTHREADS)
   extern ACE_Export
 #else
   ACE_NAMESPACE_INLINE_FUNCTION
 #endif /* ACE_HAS_VXTHREADS */
-  int thr_join (ACE_hthread_t waiter_id,
-                ACE_THR_FUNC_RETURN *status);
+  int thr_join (ACE_hthread_t waiter_id, ACE_THR_FUNC_RETURN *status);
 
 #if defined (ACE_HAS_VXTHREADS)
   extern ACE_Export
@@ -1681,8 +1679,7 @@ namespace ACE_OS {
   int thr_keyfree (ACE_thread_key_t key);
 
   ACE_NAMESPACE_INLINE_FUNCTION
-  int thr_kill (ACE_thread_t thr_id,
-                int signum);
+  int thr_kill (ACE_thread_t thr_id, int signum);
 
   ACE_NAMESPACE_INLINE_FUNCTION
   size_t thr_min_stack (void);
@@ -1697,20 +1694,16 @@ namespace ACE_OS {
   const char* thr_name (void);
 
   ACE_NAMESPACE_INLINE_FUNCTION
-  int thr_setcancelstate (int new_state,
-                          int *old_state);
+  int thr_setcancelstate (int new_state, int *old_state);
 
   ACE_NAMESPACE_INLINE_FUNCTION
-  int thr_setcanceltype (int new_type,
-                         int *old_type);
+  int thr_setcanceltype (int new_type, int *old_type);
 
   ACE_NAMESPACE_INLINE_FUNCTION
   int thr_setconcurrency (int hint);
 
   ACE_NAMESPACE_INLINE_FUNCTION
-  int thr_setprio (ACE_hthread_t ht_id,
-                   int priority,
-                   int policy = -1);
+  int thr_setprio (ACE_hthread_t ht_id, int priority, int policy = -1);
 
   extern ACE_Export
   int thr_setprio (const ACE_Sched_Priority prio);
@@ -1718,18 +1711,14 @@ namespace ACE_OS {
 # if defined (ACE_HAS_THREAD_SPECIFIC_STORAGE)
   /// @internal Applications should call thr_setspecific
   extern ACE_Export
-  int thr_setspecific_native (ACE_OS_thread_key_t key,
-                              void *data);
+  int thr_setspecific_native (ACE_OS_thread_key_t key, void *data);
 # endif /* ACE_HAS_THREAD_SPECIFIC_STORAGE */
 
   extern ACE_Export
-  int thr_setspecific (ACE_thread_key_t key,
-                       void *data);
+  int thr_setspecific (ACE_thread_key_t key, void *data);
 
   ACE_NAMESPACE_INLINE_FUNCTION
-  int thr_sigsetmask (int how,
-                      const sigset_t *nsm,
-                      sigset_t *osm);
+  int thr_sigsetmask (int how, const sigset_t *nsm, sigset_t *osm);
 
   ACE_NAMESPACE_INLINE_FUNCTION
   int thr_suspend (ACE_hthread_t target_thread);
